--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/glob": "^7.2.0",
     "@types/node": "^16.11.5",
+    "@types/sequelize": "^4.28.10",
     "discord-api-types": "^0.24.0",
     "eslint": "^8.1.0",
     "typescript": "^4.4.4"
@@ -20,6 +21,7 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
-    "log4js": "^6.3.0"
+    "log4js": "^6.3.0",
+    "sequelize": "^6.9.0"
   }
 }
