--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
     "log4js": "^6.3.0",
-    "sequelize": "^6.9.0"
+    "sequelize": "^6.9.0",
+    "sqlite3": "^5.0.2"
   }
 }
