--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "glob": "^7.2.0",
     "log4js": "^6.3.0",
     "sequelize": "^6.9.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "tslib": "^2.3.1"
   }
 }
