--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/glob": "^7.2.0",
     "@types/node": "^16.11.5",
+    "@types/node-schedule": "^1.3.2",
     "@types/sequelize": "^4.28.10",
     "discord-api-types": "^0.24.0",
     "eslint": "^8.1.0",
