--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "conf": "^10.1.1",
-    "discord.js": "^13.2.0",
+    "discord.js": "github:monbrey/discord.js#modals",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
     "log4js": "^6.3.0",
