--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.5",
     "@types/node-schedule": "^1.3.2",
     "@types/sequelize": "^4.28.10",
+    "@types/validator": "^13.7.1",
     "discord-api-types": "^0.24.0",
     "eslint": "^8.1.0",
     "typescript": "^4.4.4"
@@ -25,7 +26,9 @@
     "glob": "^7.2.0",
     "log4js": "^6.3.0",
     "node-schedule": "^2.1.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.9.0",
+    "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
     "tslib": "^2.3.1"
   }
