--- a/package.json
+++ b/package.json
@@ -13,15 +13,12 @@
     "@types/node-schedule": "^1.3.2",
     "@types/sequelize": "^4.28.10",
     "@types/validator": "^13.7.1",
-    "discord-api-types": "^0.24.0",
     "eslint": "^8.1.0",
-    "typescript": "^4.4.4"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.12.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
     "conf": "^10.1.1",
-    "discord.js": "github:monbrey/discord.js#modals",
+    "discord.js": "^14.15.2",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
     "log4js": "^6.3.0",
